# very-hsl

./: .gitignore  README.md  makefile  pyproject.toml
dev/: docker-compose.yml
lambda/: lambda_function.py
veri_hsl/: main.py  mqtt_functions.py
